WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198141
REGRESSION(
r245148
): Removing inputmode="none" does not bring up software keyboard
https://bugs.webkit.org/show_bug.cgi?id=198141
Summary
REGRESSION(r245148): Removing inputmode="none" does not bring up software key...
Ryosuke Niwa
Reported
2019-05-22 15:02:15 PDT
r245148
changed so that we don't always create UIKeyboard. This introduced a regression that removing inputmode="none" no longer brings up the keyboard. <
rdar://problem/50613388
>
Attachments
Fixes the bug
(6.58 KB, patch)
2019-05-22 15:09 PDT
,
Ryosuke Niwa
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2019-05-22 15:09:22 PDT
Created
attachment 370449
[details]
Fixes the bug
Geoffrey Garen
Comment 2
2019-05-22 15:13:48 PDT
Comment on
attachment 370449
[details]
Fixes the bug r=me
Alexey Proskuryakov
Comment 3
2019-05-22 15:34:12 PDT
Comment on
attachment 370449
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=370449&action=review
> LayoutTests/fast/forms/ios/inputmode-removing-none.html:59 > +//setTimeout(finishJSTest, 7000);
Commented out code.
Ryosuke Niwa
Comment 4
2019-05-22 16:27:14 PDT
(In reply to Alexey Proskuryakov from
comment #3
)
> Comment on
attachment 370449
[details]
> Fixes the bug > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=370449&action=review
> > > LayoutTests/fast/forms/ios/inputmode-removing-none.html:59 > > +//setTimeout(finishJSTest, 7000); > > Commented out code.
Oh oops, will remove that.
Ryosuke Niwa
Comment 5
2019-05-22 17:30:25 PDT
Committed
r245661
: <
https://trac.webkit.org/changeset/245661
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug